# dsan-6650-final-project

./: .gitignore  README.md  pyproject.toml
final-report-site/: _quarto.yml  index.qmd  styles.css
final-report-site/_site/: search.json
final-report-site/_site/site_libs/bootstrap/: bootstrap-ce8923fe0a61f71384239a6c8782c614.min.css  bootstrap-dark-74dd67115f25aec5417f30d985e67347.min.css
notebooks/: grpo-demo-gemma3-1b-post-training.ipynb  grpo_gemma_3_inference_v2.ipynb  grpo_gemma_3_planner_solver_mode_a.ipynb  grpo_gemma_3_planner_solver_mode_b.ipynb
results/: demo_posttraining_eval.txt  demo_pretraining_eval.txt  two_step_posttraining_eval.txt  two_step_pretraining_eval.txt
