[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-tunix-fine-tuning"
version = "0.1.0"
description = "An advanced RL Tunix Fine Tuning Project for DSAN 6650"
authors = [
    {name = "CJ Jones", email = "cjmijones@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "kagglehub",
    "ipywidgets",
    "tensorflow",
    "tensorflow_datasets",
    "tensorboardX",
    "transformers",
    "grain",
    "google-tunix[prod]==0.1.3",
    "flax==0.12.0",
    "datasets",
    "wandb==0.22.0",
    "ipykernel>=7.1.0",
]

